# vid-pipeline

./: .gitignore  PATH_FIX.md  README.md  arch.md  config.json.example  objects-edit.txt  objects.txt  pipeline.py  pyproject.toml  render.py  review.html  server.py  vplib.py  web-design  worker.py
pipeline/2026-04-17-06-36-40/: action_items.json  asset_manifest.json  backgrounds.txt  meta-info.json  objects.txt  script.txt  shots.json
pipeline/2026-04-17-06-36-40/scene_packages/: shot_01.json  shot_02.json  shot_03.json  shot_04.json  shot_05.json  shot_06.json  shot_07.json  shot_08.json  shot_09.json  shot_10.json  shot_11.json  shot_12.json  shot_13.json  shot_14.json  shot_15.json
pipeline/2026-04-17-07-13-48/: action_items.json  asset_manifest.json  backgrounds.txt  context.txt  meta-info.json  objects.txt  script.txt  shots.json
pipeline/2026-04-17-07-13-48/scene_packages/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
pipeline/2026-04-17-13-39-11/: action_items.json  asset_manifest.json  backgrounds.txt  meta-info.json  objects.txt  raw_input.txt  script.txt  shots.json
pipeline/2026-04-17-13-39-11/scene_packages/: 1.json  10.json  11.json  12.json  13.json  2.json  3.json  4.json  5.json  6.json  (+3 more)
pipeline/2026-04-19-00-37-07/: action_items.json  asset_manifest.json  backgrounds.txt  characters.txt  harness.json  meta-info.json  objects.txt  script.txt  shots.json
(+24 files in other folders)
